# gpu_pointers_class

./: CMakeLists.txt
cmake/: ConfigureExecutable.cmake
include/gpu_pointers/: coalesce_ptr.cuh  dummy_ptr.cuh
include/gpu_pointers/table_wrappers/: dummy_ht.cuh  iht_wrapper.cuh  old_p2_wrapper.cuh  p2_wrapper.cuh  warpcore_wrapper.cuh
include/gpu_pointers/tables/: iht_double_hashing.cuh  p2_hashing_external.cuh  p2_hashing_internal.cuh
tests/: CMakeLists.txt
tests/src/: double_ptr_test.cu  pointer_test.cu
